hero-header for all sizes

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,800;1,900&family=Nunito:ital,wght@0,400;1,400;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,800;0,900&family=Nunito:ital,wght@0,400;1,400;1,600&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bb64da5fe1.js" crossorigin="anonymous"></script>
 
@@ -15,9 +15,31 @@
 </head>
 
 <body>
-
-    
-    <section>
+    <header class="hero-container">
+        <div>
+            <section id="logo">
+                <i class="fas fa-compact-disc"></i>
+            </section>
+            <ul class="show-for-md" id="nav">
+                <li>
+                    <h4>Brands</h4> 
+                </li>
+                <li>
+                    <h4>Lessons</h4> 
+                </li>
+                <li>
+                    <h4>Catergories</h4> 
+                </li>
+                <li>
+                    <h4>Services</h4> 
+                </li>
+            </ul>
+            <section id="burger-container">
+                <i id="burger-icon" class="fas fa-bars"></i>
+            </section>
+        </div>
+    </header>
+    <section id="pop-up">
             <div>
                 <svg id="X" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
                     <g stroke="#42B5A0" stroke-width="5" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
@@ -100,7 +122,11 @@
             <!-- Tiny Slider -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
             
-            <script src="js/scripts-min.js"></script>       
+            <script src="js/scripts-min.js"></script>
 </body>
-
+<section class="hero-container" id="hero-image">
+    <div>
+        <h1>Explore the <br class="show-for-xl"> World of <span class="italic">Music</span></h1>
+    </div>
+</section>
 </html>
