--- a/deploy/pop-up.html
+++ b/deploy/pop-up.html
@@ -1,4 +1,4 @@
-<section>
+<section id="pop-up">
     <div>
         <svg id="X" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
             <g stroke="#42B5A0" stroke-width="5" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
