shadow-bg for pop up form

--- a/deploy/pop-up.html
+++ b/deploy/pop-up.html
@@ -1,5 +1,5 @@
 <section id="pop-up">
-    <div id="shawdow-bg">
+    <div id="shadow-bg">
     </div>
     <div>
         <svg id="X" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
