--- a/deploy/index.html
+++ b/deploy/index.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <section id="pop-up">
-            <div id="shawdow-bg">
+            <div id="shadow-bg">
             </div>
             <div>
                 <svg id="X" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
