--- a/deploy/pop-up.html
+++ b/deploy/pop-up.html
@@ -10,9 +10,12 @@
 
         <i class="fas fa-compact-disc"></i>
 
-
-        <h2>Get in Touch!</h2>
-        <h3 id="description">Have a question or a comment about our products? <br> Feel free to share it with us.</h3>
+        <svg id="input-path-container" width="359" height="80" xmlns="http://www.w3.org/2000/svg">
+            <path id="input-path" d="M0 35.522c37 0 112.109 43 185.875 43S298.126 1 358.333 1" stroke="none" fill="none" fill-rule="evenodd"/>
+        </svg>
+    
+        <h2 class="main-text">Get in Touch!</h2>
+        <h3 class="main-text" id="description">Have a question or a comment about our products? <br> Feel free to share it with us.</h3>
 
         <div id="form">
             <form action="https://formspree.io/mlepowjj" method="POST">
@@ -26,7 +29,7 @@
                 <section class="input">
                     <textarea placeholder="Your Message" name="comment" cols="50" rows="5"></textarea>
                 </section>
-                <section>
+                <section class="main-text">
                     <h3>We don’t share your information to others</h3>
                 </section>
                 <div>
@@ -40,7 +43,7 @@
               <path d="M17-569c35.577 65.83 18.855 122.216-50.168 169.159C-136.7-329.427-54.776-266.627-68.41-195.673c-13.633 70.953-83.702 58.109-83.702 161.89C-152.112 35.407-209.075 70-323 70v-639H17z" fill="#FEC858"/>
               <path d="M25 0v173h10v38H0v-38h10V0h15z" fill="#FFF"/>
             </g>
-          </svg>
+        </svg>
           
         <div id="waves">
             <svg id="thesvg" viewBox="0 0 359 639" xmlns="http://www.w3.org/2000/svg">
