--- a/deploy/index.html
+++ b/deploy/index.html
@@ -161,8 +161,8 @@
               </g>
             </g>
           </svg>
-    
-    <audio id="audio" crossOrigin="anonymous" src="sound/2.mp3" ></audio>
+    <h1>click me</h1>
+    <audio id="audio" crossOrigin="anonymous" src="sound/eve.mp3" ></audio>
     </section>
 
      <!-- jQuery -->
