fixed music box in the right corner

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -127,6 +127,7 @@
         <div>
             <h1>Explore the <br class="show-for-xl"> World of <span class="italic">Music</span></h1>
         </div>
+        <div id="index-content"></div>
     </section>
     
     <section id="music-box-container">
